refactor: some api
